--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/c538c9717e.js" crossorigin="anonymous"></script>
+    <title>INSTA CLONE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
